<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.whatnow.User.Ping">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="362dp"
        android:layout_height="43dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="22dp"
        android:text="@string/escolha_o_intervalo_de_ping"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/ping5"
        android:layout_width="214dp"
        android:layout_height="44dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="84dp"
        android:text="@string/de_10_em_10_minutos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/ping10"
        android:layout_width="214dp"
        android:layout_height="47dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="84dp"
        android:text="@string/de_5_em_5_minutos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ping5" />

    <Button
        android:id="@+id/btn_Postping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ping5"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>
